# Olympe-Engine

./: .gitignore  .gitmodules  ACTION_FINALE_MANUELLE.md  ACTION_FINALE_RESTAURATION.md  ACTION_IMMEDIATE_2MIN.md  ACTION_MAINTENANT.md  ACTION_PLAN_NODE_PANELS_FIXES.md  ACTION_PLAN_START_TODAY.md  AIEDITORGUI_IMPLEMENTATION_SUMMARY.md  AIGRAPHPLUGIN_BT_IMPLEMENTATION_SUMMARY.md  ANALYSIS_TABMANAGER_RENDERER_INTERFACE_MISMATCH.md  ARCHITECTURE.md  ARCHITECTURE_RECOMMENDATIONS_FOR_CLEAN_REBUILD.md  ARCHITECTURE_VISUAL_GUIDE.md  ASSET_BROWSER_IMPLEMENTATION.md  ASSET_EXPLORER_ARCHITECTURE.md  ASSET_EXPLORER_DIAGRAM.md  ASSET_EXPLORER_IMPLEMENTATION_SUMMARY.md  AUDIT_CODEBASE_CLEANUP_REPORT.md  AUDIT_PERFORMANCE_PHASE26.md  Add-EditorsToSolution.ps1  BACKUP_CORROMPU_SITUATION.md  BEHAVIOR_TREE_DEPENDENCY_LOADING.md  BILAN_COMPLET_SESSION.md  BLUEPRINT_EDITOR_ARCHITECTURE.md  BLUEPRINT_EDITOR_ARCHITECTURE_ANALYSIS.md  BLUEPRINT_EDITOR_ARCHITECTURE_DIAGRAMS.md  BLUEPRINT_EDITOR_DUAL_MODE_IMPLEMENTATION.md  BLUEPRINT_EDITOR_MASTER_INDEX.md  BLUEPRINT_EDITOR_READING_GUIDE.md  BLUEPRINT_EDITOR_REFACTORING_TECHNICAL_DEEP_DIVE.md  BLUEPRINT_EDITOR_SUMMARY.md  BLUEPRINT_EDITOR_USER_GUIDE.md  BLUEPRINT_EDITOR_V2_ARCHITECTURE.txt  BLUEPRINT_JSON_SCHEMA.md  BT_AI_IMPLEMENTATION_SUMMARY.md  BT_AI_VISUAL_ARCHITECTURE.txt  BT_DEBUGGER_IMPLEMENTATION_SUMMARY.md  BT_EDITOR_CONNECTION_VALIDATION.md  BT_EDITOR_IMPLEMENTATION_SUMMARY.md  (+290 more)
.github/: COPILOT_CONTEXT.md  COPILOT_INSTRUCTIONS.md  PHASE_44_4_FINAL_SUMMARY.md  PHASE_50_1_4_COMPLETION_REPORT.md  PHASE_50_1_4_SAVE_FUNCTION_TESTING.md  PHASE_50_1_5_REMEDIATION_RESULTS.md  PHASE_52_FINAL_SUMMARY.md  PHASE_52_ROOT_CAUSE_ANALYSIS.md  PHASE_52_RUNTIME_TEST_GUIDE.md  PULL_REQUEST_TEMPLATE_TILEMAP_EDITOR.md  QUICK_REFERENCE_44_4.md  copilot-instructions.md
Blueprints/: README.md  example_entity_complete.json  example_entity_simple.json  global_blackboard.json  test_entity_generated.json  test_entity_modified.json
Config/: ATS-VS-editor-config.json  BT_config.json  Inputs.json  global_blackboard_register.json  olympe-config.json  tiled_prefab_mapping.json
Docs/: ATS-VS-GRAMMAIRE-GUIDE.md  Animation_Editor_User_Guide.md  Animation_System.md  BLUEPRINT-REFACTOR-MARCH-2026.md  BLUEPRINT_EDITOR_FIXED_LAYOUT_IMPLEMENTATION.md  BLUEPRINT_EDITOR_LOADING_FIXES.md  BRIEF AGENT COPILOT _ Atomic Task System - Phase 4.md  BehaviorTreeDebugger.md  Blueprint Editor Features.md  Blueprint_Editor_Advanced_Systems.md  Blueprint_Editor_Pipeline_Summary.md  Blueprint_Editor_User_Guide_v4.md  CAHIER DES CHARGES _ ÉDITEUR NODE GRAPH 2.0 - ATOMIC TASKS SYSYEM.md  Collision_Types_Reference.md  ComponentAutoRegistration.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_v4_FINAL_SUMMARY.md  Navigation_README_OLD.md  Navigation_System_Reference.md  Pathfinding_Integration_Guide.md  README.md  README_Documentation_Index.md  TUTORIEL-ATS-VS-Graphe Design.md
Documentation/: 00_COMPLETION_SUMMARY.md  00_ENTITY_PREFAB_EDITOR_INDEX.md  ACTION_PARAMETERS_FINAL_SUMMARY.md  AI_IMPLEMENTATION_SUMMARY.md  ANALYSIS_END_TO_END_FILE_LOADING_CHAIN.md  ANIMATION_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS_27-03-2026.md  ARCHITECTURE_SUBGRAPH_MODALS.md  ARCHITECTURE_SUBGRAPH_MODALS_USER_GUIDE.md  ATS node graph types and variables registrers.md  ATS_Refactoring_Master_Plan.md  ATS_VS_Phase1_Migration_Notes.md  ATS_VS_Phase2_RuntimeNotes.md  ATS_VS_Phase3_Complete.md  ATS_VS_Phase4_Complete.md  ATS_VS_Phase5_VisualEditor.md  ATS_VS_Phase7_FinalIntegration.md  ATS_VS_Phase8_Subgraphs.md  AUDIT_CRITICAL_FIXES_COMPLETION.md  AUDIT_REPORT_NODE_PANELS_SERIALIZATION.md  AUDIT_SUMMARY_NODE_PANELS_VISUAL.md  AUDIT_SWITCH_CASE_SYSTEM.md  BLUEPRINT-REFACTOR-MARCH-2026.md  BLUEPRINT_EDITOR_EXECUTIVE_SUMMARY_FR.md  BT_DEBUGGER_HORIZONTAL_LAYOUT_SUMMARY.md  BUG_ANALYSIS_MULTI_TAB_NODE_POSITION_RESET.md  Blueprint_Editor_Documentation_Complete.md  CAMERA_SYSTEM_ECS.md  CAMERA_SYSTEM_ECS_FR.md  CAMERA_SYSTEM_IMPLEMENTATION_SUMMARY.md  CODE_DOCUMENTATION_GUIDE.md  COMMAND_SYSTEM_ARCHITECTURE.md  COMPLETE_ROADMAP_SUMMARY.md  COMPLETION_REPORT.md  CONCEPTION ATS - NODES TYPES - VARIABLES AND BLACKBOARD.md  CONCEPTION-ATS-VISUAL-SCRIPTING-v2.md  CONCRETE_IMPLEMENTATION_EXAMPLE.md  COPILOT_DESIGNER_AGENT.md  COPILOT_PROJECT_MANAGER.md  (+191 more)
Examples/: README.md  asset_loader_test.cpp  imgui.ini  imgui_imnodes_test.cpp  test_output_assetloader.txt  test_output_imgui.txt
OlympeBlueprintEditor/: .gitignore  ASSET_BROWSER_README.md  ASSET_BROWSER_UI.md  EDITOR_USAGE.md  FEATURES.md  Makefile  Makefile.gui  OlympeBlueprintEditor  OlympeBlueprintEditor.rc  OlympeBlueprintEditor.vcxproj  OlympeBlueprintEditor.vcxproj.bak  OlympeBlueprintEditor.vcxproj.filters  PHASE2_CONCEPT.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASE2_README.md  QUICK_START.md  README.md  blueprint_editor_config.json  blueprinteditor.cpp  blueprinteditor.h  camera_bt_test.prefab.json  demo_editor.sh  imgui.ini  prefabtest05-04-2026.ats  resource.h  save simple entityprefab.json  setup_phase2.sh  simple_test_prefabEntity.prefab.json  simple_visualscript.ats.json
OlympeTilemapEditor/: OlympeTilemapEditor.vcxproj  OlympeTilemapEditor.vcxproj.filters
Source/OlympeTilemapEditor/: CMakeLists.txt  README.md
Source/OlympeTilemapEditor/include/: AssetManager.h  EditorState.h  LevelManager.h  TilemapEditorApp.h  TilesetManager.h
Source/OlympeTilemapEditor/src/: AssetManager.cpp  EditorState.cpp  LevelManager.cpp  TilemapEditorApp.cpp  TilesetManager.cpp  main.cpp
Source/TiledLevelLoader/: CMakeLists.txt  IMPLEMENTATION_ISOMETRIC_ENTITY_PLACEMENT_FIX.md  README.md  VALIDATION_AND_ROBUSTNESS.md
Source/TiledLevelLoader/include/: IsometricProjection.h  LevelParser.h  ParallaxLayerManager.h  TiledDecoder.h  TiledJsonHelper.h  TiledLevelLoader.h  TiledStructures.h  TiledToOlympe.h  TilesetCache.h  TilesetParser.h  tiled_constants.h
Source/TiledLevelLoader/src/: IsometricProjection.cpp  LevelParser.cpp  ParallaxLayerManager.cpp  TiledDecoder.cpp  TiledLevelLoader.cpp  TiledToOlympe.cpp  TilesetCache.cpp  TilesetParser.cpp
(+1462 files in other folders)
